--- a/cards/index.html
+++ b/cards/index.html
@@ -7,6 +7,56 @@
     <title>Cards</title>
 </head>
 <body>
-    
+    <main class="main">
+        <section class="cards">
+            <article class="cards__card1">
+                <header class="cards__card1-header">
+                    <figure class="cards__card1-img">
+                        <img src="./assets/images/icon-sedans.svg" alt="Icone carro sedan">
+                    </figure>
+                    <p class="cards__cards1-title">Sedans</p>
+                </header>
+                <p class="cards__card1-text">
+                    Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+                    or on your next road trip.
+                </p>
+                <footer class="cards__cards1-footer">
+                    <button class="cards__cards1-button">Learn more</button>
+                </footer>
+            </article>
+
+            <article class="cards__card2">
+                <header class="cards__card2-header">
+                    <figure class="cards__card2-img">
+                        <img src="./assets/images/icon-sedans.svg" alt="Icone carro sedan">
+                    </figure>
+                    <p class="cards__cards1-title">SUVs</p>
+                </header>
+                <p class="cards__card2-text">
+                    Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+                    and off-road adventures.
+                </p>
+                <footer class="cards__cards2-footer">
+                    <button class="cards__cards2-button">Learn more</button>
+                </footer>
+            </article>
+
+            <article class="cards__card3">
+                <header class="cards__card3-header">
+                    <figure class="cards__card3-img">
+                        <img src="./assets/images/icon-sedans.svg" alt="Icone carro sedan">
+                    </figure>
+                    <p class="cards__cards1-title">Luxury</p>
+                </header>
+                <p class="cards__card3-text">
+                    Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+                    rental and arrive in style.
+                </p>
+                <footer class="cards__cards3-footer">
+                    <button class="cards__cards3-button">Learn more</button>
+                </footer>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
