refactor: change button description

--- a/cards/index.html
+++ b/cards/index.html
@@ -21,7 +21,7 @@
                     or on your next road trip.
                 </p>
                 <footer class="cards__cards1-footer">
-                    <button class="cards__cards1-button">Learn more</button>
+                    <button class="cards__button">Learn more</button>
                 </footer>
             </article>
 
@@ -37,7 +37,7 @@
                     and off-road adventures.
                 </p>
                 <footer class="cards__cards2-footer">
-                    <button class="cards__cards2-button">Learn more</button>
+                    <button class="cards__button">Learn more</button>
                 </footer>
             </article>
 
@@ -53,7 +53,7 @@
                     rental and arrive in style.
                 </p>
                 <footer class="cards__cards3-footer">
-                    <button class="cards__cards3-button">Learn more</button>
+                    <button class="cards__button">Learn more</button>
                 </footer>
             </article>
         </section>
