chore: change button background and hover

--- a/cards/index.html
+++ b/cards/index.html
@@ -41,7 +41,7 @@
                     and off-road adventures.
                 </p>
                 <footer class="cards__cards2-footer">
-                    <button class="cards__button">Learn more</button>
+                    <button class="cards__button-2">Learn more</button>
                 </footer>
             </article>
 
@@ -57,7 +57,7 @@
                     rental and arrive in style.
                 </p>
                 <footer class="cards__cards3-footer">
-                    <button class="cards__button">Learn more</button>
+                    <button class="cards__button-3">Learn more</button>
                 </footer>
             </article>
         </section>
