chore: add desktop layout

--- a/stats/index.html
+++ b/stats/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Stats</title>
 </head>
 <body>
@@ -11,7 +14,7 @@
         <section class="stats">
             <article class="stats__content">
                 <header class="stats__header">
-                    <h1 class="stats__title">Get <br class="stats__title--purple">insights</br> that help your bussiness grow.</h1>
+                    <h1 class="stats__title">Get <b class="stats__title--purple">insights</b> that help your bussiness grow.</h1>
                     <p class="stats__paragraph">
                         Discover the benefits of data analytics
                         and make better decisions regarding revenue,
@@ -33,7 +36,9 @@
                     </div>
                 </footer>
             </article>
-            <img src="./img/desktop.jpg" alt="Imagem de pessoas conversando no trabalhando">
+            <figure class="stats__image">
+                <div class="stats__image--color"></div>
+            </figure>
         </section>
     </main>
 </body>
