chore: add html structure

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -8,6 +8,89 @@
     <title>Loops studio</title>
 </head>
 <body>
-    
+    <main class="main">
+        <header class="header">
+            <img src="" alt="" class="header__logo">
+            <nav class="header__nav">
+                <ul class="header__nav-items">
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </nav>
+            <div class="header__presentation">
+                <p class="header__presentation-p">
+                    immersive experiences that deliver
+                </p>
+            </div>
+        </header>
+        <section class="leader">
+            <img src="" alt="" class="leader__image">
+            <article class="leader__explanation">
+                <h2 class="subtitle">the leader in interactive vr</h2>
+                <p class="leader__paragraph">
+                    Founded in 2021, Loopstudios has been producing world-class
+                    virtual reality projects for some of the best companies around
+                    the globe. Our award-winning creations have transformed bussiness
+                    through digital experiences that bind to their brand.
+                </p>
+            </article>
+        </section>
+        <section class="creations">
+            <header class="creations__header">
+                <h2 class="subtitle">Our creations</h2>
+                <button class="creations__button">See all</button>
+            </header>
+            <section class="creations__articles">
+                <figure class="creations__images">
+                    <div class="creations__images--dimension1"></div>
+                </figure>
+                <figure class="creations__images">
+                    <div class="creations__images--dimension2"></div>
+                </figure>
+                <figure class="creations__images">
+                    <div class="creations__images--dimension3"></div>
+                </figure>
+                <figure class="creations__images">
+                    <div class="creations__images--dimension4"></div>
+                </figure>
+                <figure class="creations__images">
+                    <div class="creations__images--dimension5"></div>
+                </figure>
+                <figure class="creations__images">
+                    <div class="creations__images--dimension6"></div>
+                </figure>
+                <figure class="creations__images">
+                    <div class="creations__images--dimension7"></div>
+                </figure>
+                <figure class="creations__images">
+                    <div class="creations__images--dimension8"></div>
+                </figure>
+            </section>
+        </section>
+        <footer class="footer">
+            <header class="footer__header">
+                <img src="" alt="">
+                <div class="footer__header-icons">
+                    <figure><img src="./" alt=""></figure>
+                    <figure><img src="" alt=""></figure>
+                    <figure><img src="" alt=""></figure>
+                    <figure><img src="" alt=""></figure>
+                </div>
+            </header>
+            <div class="footer__company">
+                <div class="footer__links">
+                    <a href="#" class="footer__links--style">About</a>
+                    <a href="#" class="footer__links--style">Careers</a>
+                    <a href="#" class="footer__links--style">Events</a>
+                    <a href="#" class="footer__links--style">Products</a>
+                    <a href="#" class="footer__links--style">Support</a>
+                </div>
+                <p class="footer__reserved">&copy 2021 Loopstudios. All rights reserved.</p>
+            </div>
+        </footer>
+    </main>
 </body>
 </html>
