--- a/order-summary/index.html
+++ b/order-summary/index.html
@@ -4,38 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="build/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
     <title>Order summary</title>
 </head>
 <body>
     <div class="card">
-        <main class="main">
-            <section class="content">
-                <header class="content__header">
-                    <h1 class="content__title">Order summary</h1>
+        <main class="card__main">
+            <section class="card__content">
+                <header class="card__header">
+                    <h1 class="card__title">Order summary</h1>
                 </header>
-                <summary class="content__explanation">
-                    <p class="content__paragraph">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+                <summary class="card__explanation">
+                    <p class="card__paragraph">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
                 </summary>
             </section>
             <section class="plan">
                 <div class="plan__annual">
-                    <figure class="plan__icon">
-                        <img src="./assets/images/icon-music.svg" alt="Icone de nota musical">
-                    </figure>
-                    <div class="plan__price">
-                        <h4 class="plan__price-title">Annual Plan</h4>
-                        <small class="plan__price-number">$59.99/year</small>
+                    <div class="plan__annual-price">
+                        <figure class="plan__annual-icon">
+                            <img src="./assets/images/icon-music.svg" alt="Icone de nota musical">
+                        </figure>
+                        <div class="plan__price">
+                            <h4 class="plan__price-title">Annual Plan</h4>
+                            <small class="plan__price-number">$59.99/year</small>
+                        </div>
                     </div>
+     
                     <a href="#" class="plan__price-change">Change</a>
                 </div>
             </section>
-        </main>
-        <footer class="footer">
-            <button class="footer__button">Procced to payment</button>
-            <button class="footer__button-cancel">Cancel order</button>
-        </footer>
-    </div>
 
+            <footer class="footer">
+                <button class="footer__button">Procced to payment</button>
+                <a class="footer__link">Cancel order</a>
+            </footer>
+        </main>
+    </div>
 </body>
 </html>
